Styling Changes & Airdrop

--- a/Notus-Nft-Wallet/Notus-Nft-Wallet/Pages/Index.razor
+++ b/Notus-Nft-Wallet/Notus-Nft-Wallet/Pages/Index.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
 <a href="/login">
     <button>
         Giriş Yap
     </button>
 </a>
+
+@code {
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        NavigationManager.NavigateTo("/login");
+        base.OnAfterRender(firstRender);
+    }
+}
