--- a/Notus-Nft-Wallet/Notus-Nft-Wallet/Pages/Wallet.razor
+++ b/Notus-Nft-Wallet/Notus-Nft-Wallet/Pages/Wallet.razor
@@ -52,7 +52,7 @@
                         <div class="m-3 card col-sm-3" style="width: 18rem;">
                             <img class="mt-2" src="data:image/png;base64, @item.Value" alt="img">
                             <div class="card-body text-center">
-                                <a style="cursor: pointer;" @onclick="async () => await ShowPrivateImage(item.Key)" class="btn btn-primary">Orjinal Halini Göster</a>
+                                <a style="cursor: pointer;" @onclick="async () => await ShowPrivateImage(item.Key)" class="btn btn-primary text-white">Orjinal Halini Göster</a>
                             </div>
                         </div>
                     }
